# choobi

./: HOW_CHOOBI_WORKS.md  README.md  build-plan.md  pyproject.toml
baseline/: policy.yaml  rules.yaml  style.md
choobi/: __init__.py  agent_skill.py  auth.py  baseline.py  cli.py  commitwriter.py  config.py  docs.py  engine.py  errors.py  evaluate.py  gitio.py  help.py  history.py  hooks.py  locking.py  pr.py  repos.py  runtime.py  status.py  verify.py  views.py
choobi/baseline/: policy.yaml  style.md
choobi/ui/: server.py
choobi/ui/static/: app.js  index.html  styles.css
templates/: choobi-style-guide.template.md  roobi-style-guide.template.md
tests/: test_choobi.py  test_hardening.py
tmp/: line-art-extract.swift
